--- a/myCSS.css
+++ b/myCSS.css
@@ -30,7 +30,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #EEEEEE;
+	background: #F9B6C3;
 	margin: 0px;
 	float: left;
 	width: 100%;
@@ -38,7 +38,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #777777;
+	background: #DBB7A0;
 	margin: 0px;
 	float: left;
 	width: 100%;
