--- a/myCSS.css
+++ b/myCSS.css
@@ -2,6 +2,17 @@
 /* This is a comment! Text here will be ignored by the browser. */
 body {
 	margin: 0 auto;
+	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+}
+
+a:link {
+     color: #A9BA8C;
+}
+a:visited {
+     color: #E019C5;
+}
+a:hover, a:active, a:focus { 
+     text-decoration: underline;
 }
 .homePage {
 	background: #222222;
@@ -11,7 +22,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #AAAAAA;
+	background: #DE87B1;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -21,7 +32,7 @@ body {
 	
 }
 .nav {
-	background: #BBBBBB;
+	background:#F5A99C;
 	margin: 0px;
 	padding: 5;
 	float: left;
