--- a/myCSS.css
+++ b/myCSS.css
@@ -46,7 +46,6 @@ a:hover, a:active, a:focus {
 	margin: 0px;
 	float: left;
 	width: 100%;
-	height: 400px;
 	text-align: center;
 }
 .footer {
@@ -54,5 +53,6 @@ a:hover, a:active, a:focus {
 	margin: 0px;
 	float: left;
 	width: 100%;
+	hight: 50px;
 	text-align: center;
 }
