--- a/myCSS.css
+++ b/myCSS.css
@@ -23,7 +23,7 @@ a:hover, a:active, a:focus {
 	margin: 0 auto;
 }
 .header {
-	background: #DE87B1;
+	background: #EBE340;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
