--- a/myCSS.css
+++ b/myCSS.css
@@ -42,7 +42,7 @@ a:hover, a:active, a:focus {
 	text-align: center;
 }
 .content {
-	background: #F9B6C3;
+	background: #E3AE5F;
 	margin: 0px;
 	float: left;
 	width: 100%;
